# quick-llm

./: CLAUDE.md  Makefile  README.md  pyproject.toml
.github/workflows/: python-publish.yml
docs/: .generated-files.txt  mkdocs.yml
docs/content/: api_chat_provider.md  chain_chat_provider.md  chain_endpoints.md  chain_factory.md  chat_provider.md  prompt_input_parser.md  rag_document_ingestor.md  regex_document_layout.md  regex_preprocesor_loader.md
src/quick_llm/: __init__.py  chain_chat_provider.py  chain_endpoints.py  chain_factory.py  prompt_input_parser.py  type_definitions.py
src/quick_llm/assemblers/: __init__.py  base_assembler.py  default_assembler.py
src/quick_llm/chat/: __init__.py  chain_chat_provider.py  chat_provider.py
src/quick_llm/factory/: __init__.py  base_factory.py  chain_factory.py
src/quick_llm/providers/: provider.py
src/quick_llm/strategies/: __init__.py  base_model_strategy.py  base_strategy.py  chat_model_strategy.py  dict_model_strategy.py  null_strategy.py  text_strategy.py  typed_model_strategy.py
src/quick_llm/support/: __init__.py  base_factory.py  flow_assembler.py  prompt_input_parser.py  strategy.py  type_definitions.py
tests/: chain_chat_provider_test.py  chain_endpoints_test.py  chain_factory_test.py  prompt_input_parser_test.py  rag_document_ingestor_test.py  test_models.py
tests/chat/: api_chat_provider_test.py  chain_chat_provider_test.py
tests/factory/: base_factory_test.py  chain_factory_test.py
tests/preprocessor/: __init__.py  regex_document_layout_test.py  regex_preprocessor_loader_test.py
tests/strategies/: dict_model_strategy_test.py  null_strategy_test.py  text_strategy_test.py  typed_model_strategy_test.py
tests/support/: prompt_input_parser_test.py  rag_document_ingestor_test.py
