[project]
name = "quick-llm-factory"
version = "0.1.1"
description = "Tools for quickly building and deploying large language model applications."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "langchain>=1.2.1",
    "langchain-community>=0.4.1",
    "langchain-core>=1.2.6",
    "pydantic>=2.12.5",
]

[tool.pylint]
ignore = [".env", "venv", ".venv", "build", "dist"]
init-hook = "import sys; sys.path.insert(0, 'src')"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src", "tests"]
log_cli = true
log_cli_level = "DEBUG"
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"

[dependency-groups]
dev = [
    "coverage>=7.13.1",
    "fastapi>=0.128.0",
    "pydebug>=1.0.3",
    "pylint>=4.0.2",
    "pytest>=9.0.0",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.0.0",
    "pytest-mock>=3.15.1",
    "pydoc-markdown>=4.8.2",
]

[[tool.pydoc-markdown.loaders]]
type = "python"
search_path = ["./src/quick_llm/"]

[tool.pydoc-markdown.renderer]
type = "mkdocs"
output_directory = "./docs/"

[[tool.pydoc-markdown.renderer.pages]]
title = "Quick LLM Factory"
name = "chain_factory"
contents = ["chain_factory.*"]

[[tool.pydoc-markdown.renderer.pages]]
title = "Quick LLM Factory"
name = "chain_endpoints"
contents = ["chain_endpoints.*"]

[[tool.pydoc-markdown.renderer.pages]]
title = "Prompt Input Parser"
name = "prompt_input_parser"
contents = ["prompt_input_parser.*"]

[[tool.pydoc-markdown.renderer.pages]]
title = "RAG Document Ingestor"
name = "rag_document_ingestor"
contents = ["rag_document_ingestor.*"]

[[tool.pydoc-markdown.renderer.pages]]
title = "Regex Document Layout"
name = "regex_document_layout"
contents = ["preprocessor.regex_document_layout.*"]

[[tool.pydoc-markdown.renderer.pages]]
title = "Regex Preprocessor Loader"
name = "regex_preprocesor_loader"
contents = ["preprocessor.regex_preprocesor_loader.*"]

[[tool.pydoc-markdown.renderer.pages]]
title = "Chain Chat Provider"
name = "chain_chat_provider"
contents = ["chat.chain_chat_provider.*"]

[[tool.pydoc-markdown.renderer.pages]]
title = "Chat Provider"
name = "chat_provider"
contents = ["chat.chat_provider.*"]

[[tool.pydoc-markdown.renderer.pages]]
title = "API Chat Provider"
name = "api_chat_provider"
contents = ["chat.api_chat_provider.*"]
